[package]
name = "sol-program"
version = "0.1.0"
edition = "2021"

[features]
test-sbf = []

[dependencies]
bonsol-interface = { version = "0.4.5", features = ["on-chain"], default-features = false }
solana-program = "2.0.25"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[lib]
crate-type = ["cdylib", "lib"]
